--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -39,6 +39,8 @@ jobs:
           docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
           docker run ${{env.IMAGE_TAG}}
           docker push ${{env.IMAGE_TAG}}
+        else
+          echo "image" ${{env.IMAGE_TAG}} "already exists
         fi
     #- name: Build the Docker image
       #run: |
