--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Check if dockerfile changed
       run: |
         find ./ -name 'Dockerfile' | while read filename; do unixtime=$(git log -1 --format="%at" -- "${filename}"); touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); echo "${touchtime}"; done
-
+        ::set-env ${touchtime}=VERSION::failure
+        echo $(VERSION)
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
       with:
