--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -28,8 +28,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Check if dockerfile changed
       run: |
-        find ./ -name 'Dockerfile' 
-        while read filename; do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
+        find ./ -name 'Dockerfile' | while read filename; 
+          do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "${touchtime}"; 
         done
