--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -28,17 +28,14 @@ jobs:
       uses: actions/checkout@v3
     - name: Check if dockerfile changed
       run: |
+        echo $(VERSION)
         find ./ -name 'Dockerfile' | while read filename; 
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "${touchtime}"; 
         done
-        VERSION=${touchtime} >> $GITHUB_ENV
+        echo "VERSION=${touchtime}" >> $GITHUB_ENV
         echo $(VERSION)
-    - name: set outputs
-      id: set_outputs
-      run: |
-        echo "::set-output name=test-result::$TEST_RESULT"
         
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
