--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -28,14 +28,14 @@ jobs:
       uses: actions/checkout@v3
     - name: Check if dockerfile changed
       run: |
-        echo $(VERSION)
+        echo ${{env.VERSION}}
         find ./ -name 'Dockerfile' | while read filename; 
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "${touchtime}"; 
         done
-        echo "VERSION=${touchtime}" >> $GITHUB_ENV
-        echo $(VERSION)
+        echo "${{env.VERSION}}=${touchtime}" >> $GITHUB_ENV
+        echo ${{env.VERSION}}
         
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
