--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -33,7 +33,7 @@ jobs:
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "${touchtime}";
-          echo "env.VERSION=${touchtime}" >> $GITHUB_ENV
+          echo "${touchtime}" >> $VERSION
         done
         echo ${{env.VERSION}}
         
