--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -33,7 +33,8 @@ jobs:
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "${touchtime}";
-          echo "${touchtime}" >> ${{env.VERSION}}
+          echo "$touchtime";
+          echo "VERSION='${touchtime}'" >> $GITHUB_ENV;
         done
         echo ${{env.VERSION}}
         
