--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -28,15 +28,11 @@ jobs:
       uses: actions/checkout@v3
     - name: Check if dockerfile changed
       run: |
-        echo ${{env.VERSION}}
         find ./ -name 'Dockerfile' | while read filename; 
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
-          echo "${touchtime}";
-          echo "$touchtime";
           echo "VERSION='${touchtime}'" >> $GITHUB_ENV;
         done
-        echo ${{env.VERSION}}
         
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
@@ -47,6 +43,7 @@ jobs:
         
     - name: If Docker image doesnt exist build it
       run: |
+        echo "${{env.IMAGE_TAG}}"
         if [ -n "$(docker images -q ${{env.IMAGE_TAG}})" ]; then
           docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
           docker run ${{env.IMAGE_TAG}}
