--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -43,8 +43,7 @@ jobs:
         
     - name: If Docker image doesnt exist build it
       run: |
-        echo "docker images ls -q ${{env.IMAGE_TAG}}"
-        if [ -n "$(docker images -q ${{env.IMAGE_TAG}})" ]; then
+        if [ -n "docker images -q ${{env.IMAGE_TAG}}" ]; then
           docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
           docker run ${{env.IMAGE_TAG}}
           docker push ${{env.IMAGE_TAG}}
