--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -40,17 +40,16 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
+
     - name: If Docker image doesnt exist build it
       run: |
-        if [ -n "docker images -q ${{env.IMAGE_TAG}}" ]; then
+        if docker image inspect $IMAGE_TAG >/dev/null 2>&1; then
+          echo "The image: " ${{env.IMAGE_TAG}} " already exists"
+        else
           docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
           docker run ${{env.IMAGE_TAG}}
           docker push ${{env.IMAGE_TAG}}
           echo "The image: " ${{env.IMAGE_TAG}} " has been created"
-          echo "The image: " ${{env.IMAGE_TAG}} " already exists"
-        else
-          echo "The image: " ${{env.IMAGE_TAG}} " already exists"
         fi
 
   variable_substitution:
