--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -44,12 +44,12 @@ jobs:
     - name: If Docker image doesnt exist build it
       run: |
         if docker image inspect --tag ${{env.IMAGE_TAG}} >/dev/null 2>&1; then
-          echo "The image: " ${{env.IMAGE_TAG}} " already exists"
+          echo "The image " ${{env.IMAGE_TAG}} " already exists"
         else
           docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
           docker run ${{env.IMAGE_TAG}}
           docker push ${{env.IMAGE_TAG}}
-          echo "The image: " ${{env.IMAGE_TAG}} " has been created"
+          echo "The image " ${{env.IMAGE_TAG}} " has been created"
         fi
 
   variable_substitution:
