--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -31,7 +31,7 @@ jobs:
         find ./ -name 'Dockerfile' | while read filename; 
           do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
-          echo "VERSION='${touchtime}'" >> $GITHUB_ENV;
+          echo "VERSION=${touchtime}" >> $GITHUB_ENV;
         done
         
     - name: Login to GitHub Container Registry
