--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -16,57 +16,55 @@ env:
   USER_NAME: ${{ github.actor }}
   VERSION: "latest"
   IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
-  #example result: IMAGE_TAG: ghcr.io/jamie-holland-imi/project-name:latest
 
-jobs:       
-  build:
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-    steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-    - name: Adds Dockerfile Version to Image Tag
-      run: |
-        find ./ -name 'Dockerfile' | while read filename; 
-          do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
-          touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
-          echo "VERSION=${touchtime}" >> $GITHUB_ENV;
-        done
-        
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2.2.0
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: If Docker image doesnt exist build it
-      run: |
-        if docker image inspect --tag ${{env.IMAGE_TAG}} >/dev/null 2>&1; then
-          echo "The image " ${{env.IMAGE_TAG}} " already exists"
-        else
-          docker build . --file Dockerfile --tag ${{env.IMAGE_TAG}}
-          docker run ${{env.IMAGE_TAG}}
-          docker push ${{env.IMAGE_TAG}}
-          echo "The image " ${{env.IMAGE_TAG}} " has been created"
-        fi
-
+jobs:
   variable_substitution:
     runs-on: ubuntu-latest
     needs: build
     outputs:
       image: ${{ steps.set_image.outputs.image }}
     steps:
+      - name: Adds Dockerfile Version to Image Tag
+        run: |
+          find ./ -type f -name 'Dockerfile' | while read filename; 
+            do unixtime=$(git log -1 --format="%at" -- "${filename}"); 
+            touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
+            echo "VERSION=${touchtime}" >> $GITHUB_ENV;
+          done
+      - run: echo "The image " ${{env.IMAGE_TAG}}
       - id: set_image
         run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
-      - run: echo "The image " ${{env.IMAGE_TAG}}
       
-  compile:
+  build:
     needs: variable_substitution
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2.2.0
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: If Docker image doesnt exist build it
+      run: |
+        if docker image inspect --tag ${{needs.variable_substitution.outputs.image}} >/dev/null 2>&1; then
+          echo "The image " ${{needs.variable_substitution.outputs.image}} " already exists"
+        else
+          docker build . --file Dockerfile --tag ${{needs.variable_substitution.outputs.image}}
+          docker run ${{needs.variable_substitution.outputs.image}}
+          docker push ${{needs.variable_substitution.outputs.image}}
+          echo "The image " ${{needs.variable_substitution.outputs.image}}} " has been created"
+        fi
+      
+  compile:
+    needs: [variable_substitution, build]
+    runs-on: ubuntu-latest
     container:
-      image: ${{ needs.variable_substitution.outputs.image }}
+      image: ${{needs.variable_substitution.outputs.image}}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
