--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -3,10 +3,10 @@ name: Demo
 on:
   push:
     branches:
-      - 'main'
+      - 'dev'
   pull_request:
     branches:
-      - 'main'
+      - 'dev'
   workflow_dispatch:
   
 # The IMAGE_TAG sets the docker image name, it must be lowercase the ,, convert to lowercase
