--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -32,8 +32,7 @@ jobs:
           touchtime=$(date -d @$unixtime +'%Y%m%d%H%M.%S'); 
           echo "VERSION='${touchtime}'" >> $GITHUB_ENV;
         done
-    - run: |
-        echo "The image " ${{env.IMAGE_TAG}}
-        git log -- ./Dockerfile --pretty=format:"%h - %an, %ar : %s"
+    - run: echo "The image " ${{env.IMAGE_TAG}}
+    - run: git log -- ./Dockerfile --pretty=format:"%h - %an"
     - id: set_image
       run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
