--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -34,7 +34,7 @@ jobs:
         done
     - run: echo "The image " ${{env.IMAGE_TAG}}
     - run: |
-        VARI = $(git log -- filename ./Dockerfile --pretty=format:"%h - %t - %cd")
+        echo "VARI = $(git log -- filename ./Dockerfile --pretty=format:"%h - %t - %cd")"  >> $GITHUB_ENV
         echo $VARI
     - id: set_image
       run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
