--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -16,7 +16,8 @@ env:
   USER_NAME: ${{ github.actor }}
   VERSION: "latest"
   IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
-
+  VARIBLE: "placeholder"
+  
 jobs:
   variable_substitution:
     runs-on: ubuntu-latest
@@ -34,7 +35,10 @@ jobs:
         done
     - run: echo "The image " ${{env.IMAGE_TAG}}
     - run: |
-        echo "VARI = $(git log -- filename ./Dockerfile --pretty=format:"%h - %t - %cd")"  >> $GITHUB_ENV
-        echo $VARI
+        echo "VARIBLE = $(git log -- filename ./Dockerfile --pretty=format:"%h - %t - %cd")"  >> $GITHUB_ENV
+        echo $VARIBLE
+
+
+        
     - id: set_image
       run: echo "image=${{env.IMAGE_TAG}}" >> $GITHUB_OUTPUT
