--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -37,7 +37,7 @@ jobs:
     - run: echo "The image" ${{env.IMAGE_TAG}}
     - name: git log
       run: |
-        echo $(git hash-object ./Dockerfile --short)
+        echo $(git hash-object ./Dockerfile --format="%at")
 
 
         
