--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -40,8 +40,7 @@ jobs:
         echo $(git hash-object ./Dockerfile)
         echo $(git log -n 1 --pretty=format:%H -- ./Dockerfile)
         echo $(git rev-list -1 --all ./Dockerfile)
-
-
+        echo $(git log -n 1 --pretty=format:%h -- ./Dockerfile)
 
 
         
