--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,10 +38,9 @@ jobs:
     - run: echo "The image" ${{env.IMAGE_TAG}}
     - name: git log
       run: |
-        echo $(git hash-object ./Dockerfile)
-        echo $(git log -n 1 --pretty=format:%H -- Dockerfile)
-        echo $(git rev-list -1 --all Dockerfile)
-        echo $(git log -n 1 --pretty=format:%h -- Dockerfile)
+        echo $(git log -n 1 --pretty=format:%H -- ./README.md)
+        echo $(git rev-list -1 --all ./README.md)
+        echo $(git log -n 1 --pretty=format:%h -- ./README.md)
 
 
         
