--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,9 +38,8 @@ jobs:
     - run: echo "The image" ${{env.IMAGE_TAG}}
     - name: git log
       run: |
-        echo $(git log -n 1 --pretty=format:%H^{commit} -- ./README.md)
-        echo $(git rev-list -1 --all^{commit} ./README.md)
-        echo $(git log -n 1 --pretty=format:%h^{commit} -- ./README.md)
+        echo $(git log -n 1 --pretty=format:%h} -- ./README.md)
+        echo $(git log --oneline -- ./README.md)
 
 
         
