--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -38,8 +38,8 @@ jobs:
     - run: echo "The image" ${{env.IMAGE_TAG}}
     - name: git log
       run: |
-        echo $(git log -n 1 --pretty=format:%h} -- ./README.md)
-        echo $(git log --oneline -- ./README.md)
+        echo $(git log -n 1 --pretty=format:%h -- ./README.md)
+        echo $(git log --oneline --file=./README.md)
 
 
         
