--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,13 +26,10 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    - name: If Docker image doesnt exist build it
+    - name: Build Docker Image
       run: |
-        if docker image inspect --tag ${{ env.IMAGE_TAG }} >/dev/null 2>&1; then
-          echo "The image " ${{ env.IMAGE_TAG }} " already exists"
-        else
-          docker build . --file Dockerfile --tag ${{ env.IMAGE_TAG }}
-          docker run ${{ env.IMAGE_TAG }}
-          docker push ${{ env.IMAGE_TAG }}
-          echo "The image " ${{ env.IMAGE_TAG }} " has been created"
-        fi
+        docker build . --file Dockerfile --tag ${{ env.IMAGE_TAG }}
+        docker run ${{ env.IMAGE_TAG }}
+        docker push ${{ env.IMAGE_TAG }}
+        echo "The image " ${{ env.IMAGE_TAG }} " has been created"
+
