--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,7 +7,8 @@ on:
   pull_request:
     paths:
     - 'Dockerfile'
-    
+  workflow_dispatch:
+  
 env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
