--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -4,9 +4,11 @@ on:
   push:
     paths:
     - 'Dockerfile'
+    - '.github/workflows/docker-image.yml'
   pull_request:
     paths:
     - 'Dockerfile'
+    - '.github/workflows/docker-image.yml'
   workflow_dispatch:
   
 env:
