--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -43,12 +43,12 @@ jobs:
     - name: If Docker image doesnt exist build it
       run: |
         if ( docker pull ${{needs.variable_substitution.outputs.image}} ) >/dev/null 2>&1; then
+          echo "The image " ${{needs.variable_substitution.outputs.image}} " already exists"
+        else
           docker build . --file Dockerfile --tag ${{needs.variable_substitution.outputs.image}}
           docker run ${{needs.variable_substitution.outputs.image}}
           docker push ${{needs.variable_substitution.outputs.image}}
-          echo "The image " ${{needs.variable_substitution.outputs.image}}} " has been created"
-        else
-          echo "The image " ${{needs.variable_substitution.outputs.image}} " already exists"
+          echo "The image " ${{needs.variable_substitution.outputs.image}} " has been created"
         fi
       
   compile:
