--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -57,7 +57,9 @@ jobs:
         force_language: c
         output_file: CppCheckReport.txt
         exclude_check: ./Drivers
-
+        
+    - name: Install sudo package
+      run: apt update && apt install sudo
     - name: cppcheck and review         
       uses: linuxdeepin/action-cppcheck@v0.0.11    
   
