--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -44,19 +44,17 @@ jobs:
     steps:
 # Checks out your repository under $GITHUB_WORKSPACE, so that your job can access it.
 
-    - name: cppcheck
+    - name: install cppcheck
       run: |
-        git clone https://github.com/danmar/cppcheck.git \
-        cd cppcheck \
-        && git checkout 1.72
+        wget -O cppcheck.tar.gz "https://sourceforge.net/projects/cppcheck/files/cppcheck/2.12/cppcheck-2.12.0.tar.gz" --no-check-certificate
+        # unpack the archive to a neatly named target directory
+        mkdir cppcheck
+        tar xf cppcheck.tar.gz -C cppcheck --strip-components 1
+        # remove the archive
+        rm cppcheck.tar.gz
+        PATH="/cppcheck/bin:${PATH}"
         ls
-        OUT_PATH=/home/user/bin  # target location of binary
-        ls
-        make SRCDIR=build CFGDIR=~/Downloads/cppcheck-1.76.1/cfg PREFIX=$OUT_PATH
-        make install CFGDIR=$OUT_PATH/cppcheck-1.76.1/cfg PREFIX=$OUT_PATH
-        cd /tmp
-        rm -rf /tmp/cppcheck
-        ldconfig
+
 
 #    - name: Initialize CodeQL
 #      uses: github/codeql-action/init@v2
