--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -54,10 +54,7 @@ jobs:
         # remove the archive
         rm cppcheck.tar.gz
         export PATH="/cppcheck/cfg:${PATH}"
-        ls
-        cd cppcheck
-        pwd
-        ls
+        cppcheck --version
 
 
 #    - name: Initialize CodeQL
