--- a/.github/workflows/flashing.yml
+++ b/.github/workflows/flashing.yml
@@ -26,4 +26,4 @@ jobs:
         with:
           name: build_files
       - name: Flash target
-        run: gdb-multiarch -x gdb-st-link-flash-and-exit.py f303
+        run: gdb-multiarch -x gdb-st-link-flash-and-exit.py build_files
