--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -3,10 +3,10 @@ name: "Static Analysis"
 on:
   push:
     branches:
-      - 'dev'
+      - 'main'
   pull_request:
     branches:
-      - 'dev'
+      - 'main'
 # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
   
