--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2.2.0
       with:
-        registry: $REGISTRY
+        registry: ${{env.REGISTRY}}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build Docker Image
