--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -19,7 +19,7 @@ env:
 
 jobs:
   variable_substitution:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       image: ${{ steps.set_image.outputs.image }}
     steps:
@@ -28,7 +28,7 @@ jobs:
       
   build:
     needs: variable_substitution
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       packages: write
     steps:
@@ -53,7 +53,7 @@ jobs:
       
   compile:
     needs: [variable_substitution, build]
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     container:
       image: ${{needs.variable_substitution.outputs.image}}
       credentials:
