--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -38,7 +38,7 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: ${{env.REGISTRY}}
-        username: ${{ github.actor }}
+        username: ${ORG_NAME,,}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: If Docker image doesnt exist build it
       run: |
