--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -14,6 +14,7 @@ env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
+  ORG_NAME: ${{ github.repository_owner }}
   VERSION: "latest"
   IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
 
