--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -58,7 +58,7 @@ jobs:
     container:
       image: ${{needs.variable_substitution.outputs.image}}
       credentials:
-        username: ${{ github.actor }}
+        username: ${ORG_NAME,,}
         password: ${{ secrets.GITHUB_TOKEN }}
     permissions:
       packages: write
