--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,8 +15,9 @@ env:
   REGISTRY: ghcr.io
   REPO_NAME: ${{ github.event.repository.name }}
   USER_NAME: ${{ github.actor }}
+  ORG_NAME: ${{ github.repository_owner }}
   VERSION: "latest"
-  IMAGE_TAG: ${REGISTRY,,}"/"${USER_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
+  IMAGE_TAG: ${REGISTRY,,}"/"${ORG_NAME,,}"/"${REPO_NAME,,}":"${VERSION,,}
   
 jobs:
   build_image:
@@ -30,7 +31,7 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: ${{env.REGISTRY}}
-        username: ${{ github.actor }}
+        username: ${ORG_NAME,,}
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build Docker Image
       run: |
