--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -65,12 +65,8 @@ jobs:
     steps:
     - name: Checkout the repository
       uses: actions/checkout@v3
-      
     - name: Run the Makefile and Build the Project
-      run: |
-        make
-        ls
-        
+      run: make
     - name: Create Artifacts
       uses: actions/upload-artifact@v3.1.2
       with:
