--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -38,7 +38,7 @@ jobs:
         minor_pattern: "(MINOR)"
         minor_regexp_flags: ""
         # A string to determine the format of the version output
-        version_format: "${major}.${minor}.${patch}-${increment}"
+        version_format: "${major}.${minor}.${patch}"
         # Optional path to check for changes. If any changes are detected in the path the
         # 'changed' output will true. Enter multiple paths separated by spaces.
         change_path: "Core/Src/"
