--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -41,9 +41,9 @@ jobs:
         version_format: "${major}.${minor}.${patch}"
         # Optional path to check for changes. If any changes are detected in the path the
         # 'changed' output will true. Enter multiple paths separated by spaces.
-        change_path: "Core/Src/"
+        change_path: "."
         # Named version, will be used as suffix for name version tag
-        namespace: my-service
+        namespace: develop
         # If this is set to true, *every* commit will be treated as a new version.
         bump_each_commit: false
         # If bump_each_commit is also set to true, setting this value will cause the version to increment only if the pattern specified is matched.
