--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -26,6 +26,8 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Semantic Versioning
       uses: paulhatch/semantic-version@v5.3.0
       with:
