--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -46,8 +46,7 @@ jobs:
         # If true, the body of commits will also be searched for major/minor patterns to determine the version type.
         search_commit_body: false
         # The output method used to generate list of users, 'csv' or 'json'.
-        user_format_type: "json"
+        user_format_type: "csv"
         # Prevents pre-v1.0.0 version from automatically incrementing the major version.
         # If enabled, when the major version is 0, major releases will be treated as minor and minor as patch. Note that the version_type output is unchanged.
-        enable_prerelease_mode: true
-        short_tags: true
+        enable_prerelease_mode: false
