--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -34,7 +34,7 @@ jobs:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "${major}.${minor}.${patch}"
+        version_format: "v${major}.${minor}.${patch}"
         # Optional path to check for changes. If any changes are detected in the path the
         # 'changed' output will true. Enter multiple paths separated by spaces.
         change_path: "./Core/Src"
