--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -28,25 +28,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Semantic Versioning
+    - name: Calculate Semantic Versioning
       uses: paulhatch/semantic-version@v5.3.0
       with:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "v${major}.${minor}.${patch}"
-        # Optional path to check for changes. If any changes are detected in the path the
-        # 'changed' output will true. Enter multiple paths separated by spaces.
-        change_path: "./Core/Src"
-        # Named version, will be used as suffix for name version tag
-        namespace: dev
-        bump_each_commit: false
-        # If bump_each_commit is also set to true, setting this value will cause the version to increment only if the pattern specified is matched.
-        bump_each_commit_patch_pattern: ""
-        # If true, the body of commits will also be searched for major/minor patterns to determine the version type.
-        search_commit_body: false
-        # The output method used to generate list of users, 'csv' or 'json'.
-        user_format_type: "csv"
-        # Prevents pre-v1.0.0 version from automatically incrementing the major version.
-        # If enabled, when the major version is 0, major releases will be treated as minor and minor as patch. Note that the version_type output is unchanged.
-        enable_prerelease_mode: false
+        version_format: "${major}.${minor}.${patch}-${{ steps.extract-branch.outputs.branch-name }}.${increment}"
+
