--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -34,5 +34,5 @@ jobs:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "${major}.${minor}.${patch}-${{ steps.extract_branch.outputs.branch-name }}.${increment}"
+        version_format: "${major}.${minor}.${patch}-${{ steps.extract_branch.outputs.branch }}.${increment}"
 
