--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -29,8 +29,11 @@ jobs:
         fetch-depth: 0
     - name: Calculate Semantic Versioning
       uses: paulhatch/semantic-version@v5.3.0
+      id: semantic_versioning
       with:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
         version_format: "${major}.${minor}.${patch}-${{ steps.extract_branch.outputs.branch }}.${increment}"
+    - run: |
+        echo ${{ steps.semantic_versioning.outputs.version_format }}
