--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -34,5 +34,6 @@ jobs:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "${major}.${minor}.${patch}-${GITHUB_REF#refs/heads/}.${increment}"
+        version_format: "${major}.${minor}.${patch}-${{ steps.branch-name.outputs.current_branch }}.${increment}"
         user_format_type: "json"
+    - run: echo ${GITHUB_REF#refs/heads/}
