--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -34,6 +34,8 @@ jobs:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "${major}.${minor}.${patch}-${{ steps.branch-name.outputs.current_branch }}.${increment}"
+        version_format: "${major}.${minor}.${patch}-$BRANCH_NAME.${increment}"
         user_format_type: "json"
+      env: 
+        BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
     - run: echo ${GITHUB_REF#refs/heads/}
