--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -35,7 +35,7 @@ jobs:
         tag_prefix: "v"
         major_pattern: "(MAJOR)"
         minor_pattern: "(MINOR)"
-        version_format: "${major}.${minor}.${patch}-${BRANCH_NAME}.${increment}"
+        version_format: "${major}.${minor}.${patch}-${{ env.BRANCH_NAME }}.${increment}"
         user_format_type: "json"
       env: 
         BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
