--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -28,6 +28,9 @@ jobs:
         minor_pattern: "(MINOR)"
         minor_regexp_flags: ""
         version_format: "${major}.${minor}.${patch}-${{ env.BRANCH_NAME }}.${increment}"
+        bump_each_commit: false
+        bump_each_commit_patch_pattern: ""
         search_commit_body: true
         enable_prerelease_mode: true
+        debug: true
         
